# imagetransferstyle

./: .gitignore  CMakeLists.txt  README.md
source/applications/: CMakeLists.txt
source/applications/imagetransferstyle/: CMakeLists.txt  main.cpp  main.h
